@@ -35,6 +35,11 @@ Other changes:
 
 * <touch> has filelist support.
 
+* A new roundup attribute on <zip> and related task can be used to
+  control whether the file modification times inside the archive will
+  be rounded up or down (since zips only store modification times with
+  a granularity of two seconds).  The default remains to round up.
+  Bugzilla Report 17934.
 
 Changes from Ant 1.6.1 to current Ant 1.6 CVS version
 =============================================
